обновленный код